# Armor

./: .gitignore.swp
auto_aiming/: CMakeLists.txt
auto_aiming/script/: run.sh
auto_aiming/src/: main1.cpp
auto_aiming/src/KdrobotCppLibs-master/: .gitignore  CMakeLists.txt  README.md
auto_aiming/src/KdrobotCppLibs-master/.cache/clangd/index/: BackTrace.cpp.0B88FD15688DEFD7.idx  BackTrace.h.824E347F94F6A394.idx  CRC.cpp.C6A55CAAB1BB2A73.idx  CRC.h.EF787B138A2CA092.idx  HostAddressRadio.cpp.82F249B9C164DC80.idx  HostAddressRadio.h.0B555B977E81075C.idx  JsonConfig.cpp.D390C1EDFCB7C702.idx  JsonConfig.h.DB60519C2F631646.idx  MainThread.cpp.336B74682D85F713.idx  MainThread.h.5FB5E42394E328F3.idx  OpenCV_Util.cpp.08C1D4CAAD79C8B0.idx  OpenCV_Util.h.B5CA418BE007693D.idx  PNP_Calculate.cpp.356BD46BF141D749.idx  PNP_Calculate.h.E06C2FB198AAE8AD.idx  QtCompatibilityLayer.h.06A08A34DF4571A2.idx  QtCompatibilityLayer.h.4BCE389821CFC07E.idx  QtCompatibilityLayer.h.BAE909A91181C3BA.idx  RCS_Client.cpp.B4AD641469C37777.idx  RCS_Client.h.0EA3314E05FAE9D8.idx  RCS_Server.cpp.B28E907C93CF6EAC.idx  RCS_Server.h.9AC7238EEEB81AF9.idx  TcpConnect.cpp.9FCBEA216DC2E7AE.idx  TcpConnect.h.190AE6221E74DE38.idx  VCOMCOMM.cpp.DF8C0DA83957971A.idx  VCOMCOMM.h.1C8114837F557FCA.idx  VCOMCOMM.h.3F7097407DFA91CD.idx  VCOMCOMM.h.F95D2ADFFF5B1D62.idx  coordinate.cpp.F8F0072C872C111C.idx  coordinate.h.000F0AC39B280912.idx  main.cpp.572423391ED18478.idx  main.h.63430DB18F2718E8.idx  spdUtil.cpp.EED78840183F733F.idx  spdUtil.h.BCEDD57B6386CC0F.idx  spdlogger.cpp.AF5E66E7CD72F052.idx  spdlogger.h.4FEEA165BDB1B778.idx  spdlogger.h.6BFC0C61F0AC13F9.idx  spdlogger.h.6C2C3A88DA8FEF2B.idx
auto_aiming/src/KdrobotCppLibs-master/modules/OpenCV_Util/: CMakeLists.txt
auto_aiming/src/KdrobotCppLibs-master/modules/OpenCV_Util/include/: OpenCV_Util.h  PNP_Calculate.h  coordinate.h
auto_aiming/src/KdrobotCppLibs-master/modules/OpenCV_Util/matlab/: writeXML.m
auto_aiming/src/KdrobotCppLibs-master/modules/OpenCV_Util/source/: OpenCV_Util.cpp  PNP_Calculate.cpp  coordinate.cpp
auto_aiming/src/KdrobotCppLibs-master/modules/Qt_Util/include/: MainThread.h
auto_aiming/src/KdrobotCppLibs-master/modules/Realsense_Util/: CMakeLists.txt
auto_aiming/src/KdrobotCppLibs-master/modules/Realsense_Util/include/: Realsense.h  RealsenseFrame.h
auto_aiming/src/KdrobotCppLibs-master/modules/Realsense_Util/source/: Realsense.cpp  RealsenseFrame.cpp
auto_aiming/src/KdrobotCppLibs-master/modules/RobotCommSystem/: CMakeLists.txt  README.md
auto_aiming/src/KdrobotCppLibs-master/modules/RobotCommSystem/RobotCommSystemServer/: CMakeLists.txt  main.cpp  main.h
auto_aiming/src/KdrobotCppLibs-master/modules/RobotCommSystem/include/: HostAddressRadio.h  RCS_Client.h  RCS_Server.h  TcpConnect.h
auto_aiming/src/KdrobotCppLibs-master/modules/RobotCommSystem/source/: HostAddressRadio.cpp  RCS_Client.cpp  RCS_Server.cpp  TcpConnect.cpp
auto_aiming/src/KdrobotCppLibs-master/modules/VCOMCOMM/: CMakeLists.txt
auto_aiming/src/KdrobotCppLibs-master/modules/VCOMCOMM/include/: VCOMCOMM.h
auto_aiming/src/KdrobotCppLibs-master/modules/VCOMCOMM/source/: VCOMCOMM.cpp
auto_aiming/src/camera/: CMakeLists.txt
auto_aiming/src/camera/src/: adjustcamera.cpp
auto_aiming/src/detect_armor/include/: detect_armors.h
auto_aiming/src/detect_armor/src/: armor.cpp  detect_armors.cpp  lightbar.cpp  match_armors.cpp  match_lights.cpp
auto_aiming/src/kit/: CMakeLists.txt
auto_aiming/src/kit/include/: kit.h
auto_aiming/src/kit/src/: kit.cpp
auto_aiming/src/openvino_infer/: CMakeLists.txt
auto_aiming/src/openvino_infer/include/: openvino.h
auto_aiming/src/openvino_infer/src/: openvino.cpp
camera_standard/: CMakeLists.txt  main.cpp
